# vault-slicer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
tests/: test_obsidian_parser.py
vault_slicer/: main.py  obsidian_parser.py
